--- a/Pages/Assist.html
+++ b/Pages/Assist.html
@@ -6,5 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pantry locations</title>
   </head>
-  <body></body>
+  <body>
+    <!-- Nav bar -->
+    <nav>
+      <ul>
+        <li><a href="Index.html">Home</a></li>
+        <li><a href="About.html">About Us</a></li>
+        <li><a href="Assist.html">Assist</a></li>
+        <li><a href="Newsletter.html">Newsletter</a></li>
+      </ul>
+    </nav>
+  </body>
 </html>
