--- a/Pages/Assist.html
+++ b/Pages/Assist.html
@@ -15,6 +15,8 @@
         <li><a href="Assist.html">Assist</a></li>
         <li><a href="Newsletter.html">Newsletter</a></li>
       </ul>
+
+      <!-- google maps API -->
     </nav>
   </body>
 </html>
