--- a/Pages/Assist.html
+++ b/Pages/Assist.html
@@ -16,7 +16,26 @@
         <li><a href="Newsletter.html">Newsletter</a></li>
       </ul>
 
-      <!-- google maps API -->
+      <header>Seek Assistance</header>
+
+      <iframe src="https://www.google.com/maps/d/embed?mid=1rZhJumiMufoxndSdIWS1xz2PC-njXcI&ehbc=2E312F" width="640" height="480"></iframe>
+
+
+      <!-- google maps -->
+      <!-- <div id="googleMap" style="width: 100%; height: 400px"></div>
+
+      <script>
+        function myMap() {
+          var mapProp = {
+            center: new google.maps.LatLng(51.508742, -0.12085),
+            zoom: 5,
+          };
+          var map = new google.maps.Map(
+            document.getElementById("googleMap"),
+            mapProp
+          );
+        } -->
+      </script>
     </nav>
   </body>
 </html>
